@@ -73,5 +73,6 @@
   <li>Chris Heiland</li>
   <li>Michael Glaesemann</li>
   <li>Joe Pletcher</li>
-  <li>Andrei Arsu</li>
+ <li>Andrei Arsu</li>
+ <li>Chris Schults</li>
 </ul>
